--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 
-<script type="text/javascript" src="src/main/resources/lib/kotlin.js"></script>
-<script type="text/javascript" src="build/classes/kotlin/main/kotlin-js-hello-world-demo.js"></script>
+<script type="text/javascript" src="./node_modules/kotlin/kotlin.js"></script>
+<script type="text/javascript" src="./node_modules/kotlinx-html-js/kotlinx-html-js.js"></script>
+<script type="text/javascript" src="./deps-bundle.js"></script>
+<script type="text/javascript" src="build/classes/kotlin/main/html-element-vnode-converter.js"></script>
 
 </body>
 </html>
